--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <main class="main">
        <p>Основная часть</p>
        <div id="main">
-      <div><section class="number1">
+      <div class="number">
             <p>Еще 1</p>
-        </section></div> 
-       <div> <section class="number2">
+       </div> 
+       <div class="number" >
             <p>Еще 2</p>
-        </section></div> 
-       <div><section class="number3">
+        </div> 
+       <div class="number">
             <p>Еще 3</p>
-        </section></div> 
+        </div> 
     </div>
 </main>
         <aside class="aside">
