--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <main class="main">
        <p>Основная часть</p>
        <div id="main">
-      <div class="number">
+      <div class="number1">
             <p>Еще 1</p>
        </div> 
-       <div class="number" >
+       <div class="number2" >
             <p>Еще 2</p>
         </div> 
-       <div class="number">
+       <div class="number3">
             <p>Еще 3</p>
         </div> 
     </div>
